# mlops_demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  app.py  config.yml  data.dvc  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: test.csv  train.csv
src/ml_project/: dataset.py  utils.py
src/ml_project/steps/: clean.py  ingest.py  predict.py  train.py
tests/: test_clean.py  test_ingest.py  test_predict.py  test_train.py
